# speedpy

./: .cursorrules  .docker.env  .env.example  .gitignore  .local.env  AGENTS-local.docker.md  AGENTS-local.uv.md  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE.md  PADDLE_SETUP.md  PRODUCTION_READY.md  README.md  STRIPE_SETUP.md  appliku.yml  appliku_demo.yml  boot.sh  demo-content.json  docker-compose.yml  docker-compose.yml.bak  init-docker.sh  init-local.sh  init.sh  package-lock.json  package.json  pre_check.sh  pyproject.toml  requirements.txt  tailwind.config.js  tailwind_directories.json  update_pyproject.py  update_requirements.py
.claude/skills/: appliku.md
.cursor/rules/: api.mdc
crispy_tailwind/: __init__.py  layout.py  tailwind.py
crispy_tailwind/templatetags/: tailwind_field.py
demoapp/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
demoapp/migrations/: 0001_initial.py
examples/: README.md
examples/cli/: speedpy_cli.py
examples/mcp_server/: generate_mcp_tools.py  generated_tools.py  speedpy_mcp.py
mainapp/: apps.py  signals.py  subscription_plans.py  tours.py  urls.py
mainapp/admin/: __init__.py  billing.py  contact.py  (+2 more)
project/: api_urls.py  celeryapp.py  context_processors.py  email_providers.py  settings.py  urls.py
speedpycom/: og_utils.py  views.py  widgets.py
templates/: base.html
tests/: conftest.py  factories.py  test_dashboard.py  test_otp.py  test_public.py  test_teams.py
usermodel/: adapters.py  admin.py  api.py  apps.py  forms.py  mfa.py  models.py  signals.py  tests.py  tokens.py  validators.py  views.py
(+213 files in other folders)
