[project]
name = "speedupgrade"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "Django==6.0.3",
    "Pillow==12.1.1",
    "black==26.3.1",
    "celery-redbeat==2.3.3",
    "celery[redis]==5.6.2",
    "crispy-tailwind==1.0.3",
    "django-allauth[socialaccount]==65.15.0",
    "django-crispy-forms==2.6",
    "django-debug-toolbar==6.2.0",
    "django-environ==0.13.0",
    "django-extensions==4.1",
    "django-post_office==3.11.0",
    "django-ses==4.7.2",
    "django-stubs[compatible-mypy]==6.0.1",
    "djangoql==0.19.1",
    "gunicorn==25.1.0",
    "psycopg[binary]==3.3.3",
    "pyjwt[crypto]==2.12.1",
    "requests==2.32.5",
    "whitenoise==6.12.0",
    "django-structlog[commands,celery]==10.0.0",
    "django-recaptcha==4.1.0",
    "djangorestframework==3.17.0",
    "drf-spectacular==0.29.0",
    "django-otp==1.7.0",
    "qrcode==8.2",
    "django-fernet-encrypted-fields==0.3.1",
    "httpx==0.28.1",
    "dnspython==2.8.0",
    "django-paddle-billing==0.1.14",
    "python-slugify==8.0.4",
]
